<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_id"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/enter_item"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
                <EditText
                    android:id="@+id/groceryItem"
                    android:layout_below="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_item"
                    android:inputType="text"/>
                <EditText
                    android:id="@+id/groceryQty"
                    android:layout_below="@+id/groceryItem"
                    android:hint="@string/hint_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/savebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/groceryQty"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:text="@string/Button_Text"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>