<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtGroceryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Groceryname"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGroceryQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtGroceryName"
                android:paddingTop="5dp"
                android:text="@string/Quantity"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtDateAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtGroceryQty"
                android:paddingTop="5dp"
                android:text="@string/Date"
                android:textStyle="italic" />

            <TableRow
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/txtDateAdded"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/editButton"
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:drawable/ic_menu_edit"/>
                    <Button
                        android:id="@+id/deleteButton"
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:drawable/ic_menu_delete"/>

            </TableRow>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>